--- a/teaching/s2023_calc1.html
+++ b/teaching/s2023_calc1.html
@@ -115,9 +115,10 @@ Section 8.5: #1[(1),(3),(5),(7)], 2[(1),(4)], 4.<br><br>
 -->
 
 <h2><p>Exam Schedules</p></h2>
-The 1st midterm exam: <FONT COLOR="#C40062">11 April (Tuesday),</FONT> In-class.<br>
+The 1st midterm exam: <FONT COLOR="#C40062">11 April (Tuesday), 15:00--15:50.</FONT> In-class.<br>
 - Coverage: Chapters 1 and 2.<br>
 - Total 4 questions. Some problems will be identical or closely related to homework problems.<br>
+- Bring with you one of the following: (i) Government ID (ii) Student ID card (iii) A printed paper sheet of screenshot of your mobile student ID including your name, student ID, and your photo. If you don't have a valid ID listed here, you will be asked to leave the classroom and your exam score will be zero.<br>
 - If you cannot make it to the in-class exam due to an official cause (including properly documented illness), you have to submit a Make-up Exam Application Form at your department. Here is a handout about <a href="../teaching/makeup.pdf" title="Make-up exam policies">make-up exam policies</a>.<br>
   <br>
   
