--- a/teaching/s2023_introgeom.html
+++ b/teaching/s2023_introgeom.html
@@ -45,6 +45,8 @@
 2022-03-10: <FONT COLOR="red">Homework #1</FONT> has been posted below.<br>
 2022-03-04: Office hour has been changed to Mondays 17:00--17:50.<br>
 -->
+2023-04-06: <FONT color="#FF00FF"><b>Midterm exam</b></FONT> will take place on April 27th (Thu), in-class. Details will be announced later.<br>   
+2023-03-30: <FONT COLOR="red">Homework #4</FONT> has been posted below.<br>  
 2023-03-24: A note on Desargues' theorem and its proofs is available at CBNU eCampus (Blackboard) in the Week 4 course materials folder.<br>
 2023-03-23: <FONT COLOR="red">Homework #3</FONT> has been posted below.<br>  
 2023-03-16: <FONT COLOR="red">Homework #2</FONT> has been posted below.<br> 
@@ -61,6 +63,8 @@ Problems 1 to 14<br><br>
 Problems 15 to 26<br><br>
 <b>Homework  #3</b> 15 problems. Due Date: March 29th (Wed).<br>
 Problems 27 to 41<br><br>
+<b>Homework  #4</b> 12 problems. Due Date: April 5th (Wed).<br>
+Problems 42 to 53<br><br>
 
 <h2><p>Exam Schedules</p></h2>
 TBA<br>
