--- a/teaching/s2023_calc1.html
+++ b/teaching/s2023_calc1.html
@@ -40,6 +40,7 @@
 2022-03-04: Office hour has been changed to Mondays 17:00--17:50.<br>  
 2022-03-04: <FONT color="#FF00FF"><b>IMPORTANT</b></FONT> CHANGE OF CLASSROOM: Starting March 7th 10:00 class, we shall meet at N14(Humanities and Social Sciences building) Room 106. Please be sure to come to this classroom for all future class meetings.<br>
 -->
+2023-04-08: <FONT COLOR="red">Homework #3</FONT> has been posted below.<br>   
 2023-03-30: <FONT color="#FF00FF"><b>The 1st midterm exam announcement</b></FONT> The detail has been posted below.<br> 
 2023-03-26: <FONT COLOR="red">Homework #2</FONT> has been posted below.<br>   
 2023-03-10: <FONT COLOR="red">Homework #1</FONT> has been posted below.<br>   
@@ -66,21 +67,25 @@ Section 2.2: #5, 6, 9, 10[(1),(3),(5)].<br>
 Section 2.3: #1[(1),(3),(5),(7)], 2, 3, 4.<br>
 Section 2.4: #2[(1),(3),(5),(7)], 3, 4.<br>
 Section 2.5: #1, 2(1), 4.<br><br>
-  
-  <!--
 
-<b>Homework  #3</b> 19 problems. Due Date: April 13th.<br>
+  
+<b>Homework  #3</b> 24 problems.<br>
 Section 3.2: #2, 3[(1),(3),(5)], 4.<br>
 Section 3.3: #4, 5, 6, 7[(2),(3),(4),(5),(6),(7),(9)], 9.<br>
 Section 3.4: #3, 4, 5, 6, 7.<br>
 Section 3.5: #2, 3, 4, 5.<br>
-Section 3.6: #1(6), 2[(1),(2)].<br><br>  
+Section 3.6: #1(6), 2[(1),(2)].<br>
+Section 3.7: #1, 2, 3, 4, 5.<br><br>  
+
+  
+  <!--
+
 
 <b>Homework  #4</b> 16 problems. Due Date: April 20th.<br>
  <b>Homework  #5</b> 15 problems. Due Date: Before midterm exam.<br>
 
 
-Section 3.7: #1, 2, 3, 4, 5.<br>
+
 Section 4.1: #1[(1),(3),(5)], 2, 3[(1),(3)], 4[(1),(2)].<br>
 Section 4.2: #1[(4),(6)], 2[(1),(3),(5),(6)].<br>
 Section 4.3: #2[(1), (3), (5)].<br>
