--- a/teaching/s2023_geom1.html
+++ b/teaching/s2023_geom1.html
@@ -45,7 +45,8 @@
 2022-03-10: <FONT COLOR="red">Homework #1</FONT> has been posted below.<br>
 2022-03-04: Office hour has been changed to Mondays 17:00--17:50.<br>
 -->
-2023-03-30: <FONT color="#FF00FF"><b>The 1st midterm exam announcement</b></FONT> The detail has been posted below.<br>   
+2023-04-15: <FONT COLOR="red">Homework #5</FONT> has been posted below.<br>  
+ 2023-03-30: <FONT color="#FF00FF"><b>The 1st midterm exam announcement</b></FONT> The detail has been posted below.<br>   
 2023-03-26: <FONT COLOR="red">Homework #4</FONT> has been posted below.<br>  
 2023-03-26: <FONT COLOR="red">Homework #3</FONT> has been posted below.<br>  
 2023-03-20: <b>Announcements</b> The class will go online on March 28th 11:00--11:50. We still meet on the 28th 10:00 in classroom. Please read email announcements.<br> 
@@ -84,16 +85,17 @@ Exercises in Section 4.3. p.39 #1, 2, 3<br>
 Exercises in Section 4.4. p.41 #1, 3<br>
 Exercises in Section 4.5. p.43 #1, 2<br>
 <br> 
- 
-  <!-- 
-  
 
- <b>Homework  #5</b> 14 problems. Due Date: April 20th (Wed)<br>
+<b>Homework  #5</b> 12 problems.<br>
 Exercises in Section 5.2. p.48 #1, 2, 4, 5, 6<br>
 Exercises in Section 5.3. p.51 #1<br>
 Exercises in Section 6.2. p.58 #2, 3, 4, 6<br>
 Exercises in Section 6.3. p.61 #1<br> 
 Exercises in Section 6.4. p.63 #1<br><br>
+  <!-- 
+  
+
+
  
 <b>Homework  #6</b> 8 problems. Due Date: May 25th (Wed)<br>
  Exercises in Section 7.1. p.68 #1, 2<br>
@@ -127,11 +129,12 @@ The 1st midterm exam: <FONT COLOR="#C40062">12 April (Wednesday) 17:00--17:50</F
 - Coverage: Chapters 1 to 4.<br>
 - Total 4 questions.<br>
 - If you cannot make it to the in-class exam due to an official cause (including properly documented illness), you have to submit a Make-up Exam Application Form at your department. Here is a handout about <a href="../teaching/makeup.pdf" title="Make-up exam policies">make-up exam policies</a>.<br>
-  <br>
+The average was 65.10. The maximum score achieved by a student was 100.<br>
+ <br>
  
  
  <!--TBA<br>
-The average was 67.32. The maximum score achieved by a student was 95.<br><br> 
+
   
   
 Final Exam: <FONT COLOR="#C40062">17 June (Friday) 14:00--15:40</FONT> Location: TBA. <br>
