--- a/teaching/s2023_calc1.html
+++ b/teaching/s2023_calc1.html
@@ -40,6 +40,7 @@
 2022-03-04: Office hour has been changed to Mondays 17:00--17:50.<br>  
 2022-03-04: <FONT color="#FF00FF"><b>IMPORTANT</b></FONT> CHANGE OF CLASSROOM: Starting March 7th 10:00 class, we shall meet at N14(Humanities and Social Sciences building) Room 106. Please be sure to come to this classroom for all future class meetings.<br>
 -->
+2023-04-15: <FONT COLOR="red">Homework #4</FONT> has been posted below.<br>     
 2023-04-08: <FONT COLOR="red">Homework #3</FONT> has been posted below.<br>   
 2023-03-30: <FONT color="#FF00FF"><b>The 1st midterm exam announcement</b></FONT> The detail has been posted below.<br> 
 2023-03-26: <FONT COLOR="red">Homework #2</FONT> has been posted below.<br>   
@@ -77,6 +78,13 @@ Section 3.5: #2, 3, 4, 5.<br>
 Section 3.6: #1(6), 2[(1),(2)].<br>
 Section 3.7: #1, 2, 3, 4, 5.<br><br>  
 
+<b>Homework  #4</b> 10 problems.<br>
+Section 4.1: #1[(1),(3),(5)], 2, 3[(1),(3)], 4[(1),(2)].<br>
+Section 4.2: #1[(4),(6)], 2[(1),(3),(5),(6)].<br>
+Section 4.3: #2[(1), (3), (5)].<br>
+Section 4.4: #1[(1), (2)], #2(2).<br>
+Section 4.5: #1[(1), (3), (5)].<br><br>
+
   
   <!--
 
@@ -86,11 +94,6 @@ Section 3.7: #1, 2, 3, 4, 5.<br><br>
 
 
 
-Section 4.1: #1[(1),(3),(5)], 2, 3[(1),(3)], 4[(1),(2)].<br>
-Section 4.2: #1[(4),(6)], 2[(1),(3),(5),(6)].<br>
-Section 4.3: #2[(1), (3), (5)].<br>
-Section 4.4: #1[(1), (2)], #2(2).<br>
-Section 4.5: #1[(1), (3), (5)].<br><br>
  
  <b>Homework  #6</b> 17 problems. Due Date: May 25th.<br>
 Section 5.1: #2, 3.<br>
@@ -125,10 +128,10 @@ The 1st midterm exam: <FONT COLOR="#C40062">11 April (Tuesday), 15:00--15:50.</F
 - Total 4 questions. Some problems will be identical or closely related to homework problems.<br>
 - Bring with you one of the following: (i) Government ID (ii) Student ID card (iii) A printed paper sheet of screenshot of your mobile student ID including your name, student ID, and your photo. If you don't have a valid ID listed here, you will be asked to leave the classroom and your exam score will be zero.<br>
 - If you cannot make it to the in-class exam due to an official cause (including properly documented illness), you have to submit a Make-up Exam Application Form at your department. Here is a handout about <a href="../teaching/makeup.pdf" title="Make-up exam policies">make-up exam policies</a>.<br>
-  <br>
+  The average was 61.09. The maximum score achieved by a student was 94.<br><br>
   
 <!-- TBA<br>
-  The average was 58.79. The maximum score achieved by a student was 100.<br><br>
+  
  
  2nd midterm Exam: <FONT COLOR="#C40062">08 November (Tuesday),</FONT> In-class.<br>
 - Coverage: Chapter 10.<br>
