--- a/teaching/s2023_dg1.html
+++ b/teaching/s2023_dg1.html
@@ -41,7 +41,9 @@
 2022-03-11: <b>Announcements</b> Please see the standard operation procedures for an absentism for an extensive period due to SARS-CoV-2. <a href="../teaching/s2022_dg1/2022-03-11_long_covid_absence.pdf" title="Long absence due to SARS-CoV-2">PDF</a><br>
 2022-03-04: Office hour has been changed to Mondays 17:00--17:50.<br>
 -->
+2023-04-15: <FONT COLOR="red">Homework #4</FONT> has been posted below.<br>     
 2023-03-30: <FONT color="#FF00FF"><b>The 1st midterm exam announcement</b></FONT> The detail has been posted below.<br>    
+2023-03-30: <FONT COLOR="red">Homework #3</FONT> has been posted below.<br>     
 2023-03-26: The <b>1st midterm exam</b> will cover all materials in Chapters 3 and 4. There will be a handout consisting of 8 old national exam problems but only 1 problem will appear in the 1st midterm. (I shall leave out 3 problems for the 2nd midterm and the final exam. So for the 1st midterm, it is 1 out of 5.) In the meantime, please read the textbook thoroughly and master homework problems.<br>
 2023-03-26: <FONT COLOR="red">Homework #3</FONT> has been posted below.<br>     
 2023-03-26: <FONT COLOR="red">Homework #2</FONT> has been posted below.<br>   
@@ -65,13 +67,8 @@ Problems from Chapter 4 (Part 2): #11, 12, 13, 16, 17, 18, 19, 21, 28, 30<br><br
 Problems from Chapter 4 (Part 3): #32, 33, 34, 35, 38<br>  
 Problems from the National Exam: <a href="s2023_dg1/handout1.pdf" title="Selected problems from the national exam">PDF</a>.<br><br>
  
-  
-  <!--
 
- 
-  
-
-<b>Homework  #5</b>  20 problems. Due Date: May 18th.<br>
+<b>Homework  #5</b>  20 problems.<br>
 Problems from Chapter 5: #5, 7, 8<br>
 Problems from O'Neill, Elementary Differential Geometry, p.15 Exercise #3, 4, 5<br>
 Problems from O'Neill, Elementary Differential Geometry, p.22 Exercise #6<br>
@@ -79,6 +76,13 @@ Problems from O'Neill, Elementary Differential Geometry, p.40 Exercise #4, 5, 6,
 Problems from O'Neill, Elementary Differential Geometry, p.106 Exercise #2, 7, 8<br>
 Problems from O'Neill, Elementary Differential Geometry, p.110 Exercise #2, 4<br>
 Problems from O'Neill, Elementary Differential Geometry, p.120 Exercise #4<br><br>
+
+ 
+ 
+  <!--
+
+ 
+  
   
 <b>Homework  #6</b> 7 problems. Due Date: May 25th.<br>
 Problems from Handout 2.<br><br>    
