--- a/teaching/s2023_introgeom.html
+++ b/teaching/s2023_introgeom.html
@@ -45,7 +45,9 @@
 2022-03-10: <FONT COLOR="red">Homework #1</FONT> has been posted below.<br>
 2022-03-04: Office hour has been changed to Mondays 17:00--17:50.<br>
 -->
-2023-04-06: <FONT color="#FF00FF"><b>Midterm exam</b></FONT> will take place on April 27th (Thu), in-class. Details will be announced later.<br>   
+2023-04-13: <FONT color="#FF00FF"><b>Midterm exam announcement</b></FONT> The detail has been posted below.<br>     
+2023-04-13: <FONT COLOR="red">Homework #5</FONT> has been posted below.<br>  
+ 2023-04-06: <FONT color="#FF00FF"><b>Midterm exam</b></FONT> will take place on April 27th (Thu), in-class. Details will be announced later.<br>   
 2023-03-30: <FONT COLOR="red">Homework #4</FONT> has been posted below.<br>  
 2023-03-24: A note on Desargues' theorem and its proofs is available at CBNU eCampus (Blackboard) in the Week 4 course materials folder.<br>
 2023-03-23: <FONT COLOR="red">Homework #3</FONT> has been posted below.<br>  
@@ -58,22 +60,25 @@
  
 <h2><p>Homework</p></h2>
 <b>Homework  #1</b> 14 problems. Due Date: March 15th (Wed).<br>
-Problems 1 to 14<br><br>
+Chapter 1 Problems 1 to 14<br><br>
 <b>Homework  #2</b> 12 problems. Due Date: March 22nd (Wed).<br>
-Problems 15 to 26<br><br>
+Chapter 1 Problems 15 to 26<br><br>
 <b>Homework  #3</b> 15 problems. Due Date: March 29th (Wed).<br>
-Problems 27 to 41<br><br>
+Chapter 1 Problems 27 to 41<br><br>
 <b>Homework  #4</b> 12 problems. Due Date: April 5th (Wed).<br>
-Problems 42 to 53<br><br>
+Chapter 1 Problems 42 to 53<br><br>
+<b>Homework  #5</b> 12 problems. Due Date: April 19th (Wed).<br>
+Chapter 2 Problems 1 to 8<br><br>
 
 <h2><p>Exam Schedules</p></h2>
-TBA<br>
- <!--
- Midterm Exam: <FONT COLOR="#C40062">28 April (Thursday) 16:00--17:40</FONT> in-class. <br>
-- Coverage: Chapters 1 to 6 and 7 (only those sections completed by April 21st class).<br>
-- Update (2022-04-21): The exam will cover Chapters 1 to 6 and part of Chapter 7 (Only Section 7.1).<br>
+Midterm Exam: <FONT COLOR="#C40062">27 April (Thursday) 13:00--14:40</FONT> in-class. <br>
+- Coverage: Chapter 1, Chapter 2 (only those sections we completed by April 20th class).<br>
 - Total 8 questions. There will be one set of True/False questions (Please note that you get full credit if you are correct, no credit for no answer, and negative of the assigned score if your answer to this question is incorrect). This exam will be geared toward giving advantages to those who were carefully following class discussions while keeping a good pace of doing homework. <br>
-- If you cannot make it to the in-class exam due to an official cause (including properly documented illness), you have to submit a Make-up Exam Application Form at your department.<br>
+- If you cannot make it to the in-class exam due to an official cause (including properly documented illness), you have to submit a Make-up Exam Application Form at your department. Here is a handout about <a href="../teaching/makeup.pdf" title="Make-up exam policies">make-up exam policies</a>.<br>
+   
+ <!--
+- Update (2023-04-20): The exam will cover Chapter 1, Chapter 2 (only those sections we completed by April 20th class).<br>
+ 
 The average was 67.32. The maximum score achieved by a student was 95.<br><br>
   
   
