--- a/teaching/s2023_introgeom.html
+++ b/teaching/s2023_introgeom.html
@@ -45,7 +45,9 @@
 2022-03-10: <FONT COLOR="red">Homework #1</FONT> has been posted below.<br>
 2022-03-04: Office hour has been changed to Mondays 17:00--17:50.<br>
 -->
-2023-04-13: <FONT color="#FF00FF"><b>Midterm exam announcement</b></FONT> The detail has been posted below.<br>     
+2023-04-20: <FONT color="#FF00FF"><b>Midterm exam announcement</b></FONT> The coverage and details have been updated. See below.<br>     
+2023-04-20: <FONT COLOR="red">Homework #6</FONT> has been posted below.<br>  
+ 2023-04-13: <FONT color="#FF00FF"><b>Midterm exam announcement</b></FONT> The detail has been posted below.<br>     
 2023-04-13: <FONT COLOR="red">Homework #5</FONT> has been posted below.<br>  
  2023-04-06: <FONT color="#FF00FF"><b>Midterm exam</b></FONT> will take place on April 27th (Thu), in-class. Details will be announced later.<br>   
 2023-03-30: <FONT COLOR="red">Homework #4</FONT> has been posted below.<br>  
@@ -69,10 +71,13 @@ Chapter 1 Problems 27 to 41<br><br>
 Chapter 1 Problems 42 to 53<br><br>
 <b>Homework  #5</b> 12 problems. Due Date: April 19th (Wed).<br>
 Chapter 2 Problems 1 to 8<br><br>
+<b>Homework  #6</b> 14 problems. Due Date: April 26th (Wed).<br>
+Chapter 2 Problems 9 to 22<br><br>
 
 <h2><p>Exam Schedules</p></h2>
 Midterm Exam: <FONT COLOR="#C40062">27 April (Thursday) 13:00--14:40</FONT> in-class. <br>
-- Coverage: Chapter 1, Chapter 2 (only those sections we completed by April 20th class).<br>
+- <b>Important:</b> Bring your straightedge (a ruler).<br>
+- Coverage (updated): Chapter 1, <s>Chapter 2 (only those sections we completed by April 20th class)</s> Chapter 2 Part I and II (p.1 to p.113). <br>
 - Total 8 questions. There will be one set of True/False questions (Please note that you get full credit if you are correct, no credit for no answer, and negative of the assigned score if your answer to this question is incorrect). This exam will be geared toward giving advantages to those who were carefully following class discussions while keeping a good pace of doing homework. <br>
 - If you cannot make it to the in-class exam due to an official cause (including properly documented illness), you have to submit a Make-up Exam Application Form at your department. Here is a handout about <a href="../teaching/makeup.pdf" title="Make-up exam policies">make-up exam policies</a>.<br>
    
