--- a/teaching/s2023_calc1.html
+++ b/teaching/s2023_calc1.html
@@ -40,6 +40,8 @@
 2022-03-04: Office hour has been changed to Mondays 17:00--17:50.<br>  
 2022-03-04: <FONT color="#FF00FF"><b>IMPORTANT</b></FONT> CHANGE OF CLASSROOM: Starting March 7th 10:00 class, we shall meet at N14(Humanities and Social Sciences building) Room 106. Please be sure to come to this classroom for all future class meetings.<br>
 -->
+2023-05-02: <FONT COLOR="red">Homework #6</FONT> has been posted below.<br>   
+2023-05-02: <FONT COLOR="red">Homework #5</FONT> has been posted below.<br>   
 2023-04-25: <FONT color="#FF00FF"><b>The 2nd midterm exam announcement</b></FONT> The detail has been posted below.<br> 
 2023-04-15: <FONT COLOR="red">Homework #4</FONT> has been posted below.<br>     
 2023-04-08: <FONT COLOR="red">Homework #3</FONT> has been posted below.<br>   
@@ -86,6 +88,19 @@ Section 4.3: #2[(1), (3), (5)].<br>
 Section 4.4: #1[(1), (2)], #2(2).<br>
 Section 4.5: #1[(1), (3), (5)].<br><br>
 
+ 
+<b>Homework  #5</b> 17 problems.<br>
+Section 5.1: #2, 3.<br>
+Section 5.2: #1[(1),(3),(5)], 3, 4, 5.<br>
+Section 5.3: #1[(1),(3),(5),(7)], 2[(1),(2)], 4, 6, 7.<br>
+Section 5.4: #1[(1),(3),(5),(7)], 2[(1),(3)], 3.<br>
+Section 5.5: #1[(1),(2)], 2, 3.<br><br>  
+ 
+<b>Homework  #6</b> 11 problems.<br>
+Section 6.1: #2, 3, 4.<br>
+Section 6.2: #3, 4, 5, 6, 7, 8.<br>
+Section 6.3: #1[(1),(3)], 2[(1),(3)].<br><br>  
+ 
   
   <!--
 
@@ -95,18 +110,6 @@ Section 4.5: #1[(1), (3), (5)].<br><br>
 
 
 
- 
- <b>Homework  #6</b> 17 problems. Due Date: May 25th.<br>
-Section 5.1: #2, 3.<br>
-Section 5.2: #1[(1),(3),(5)], 3, 4, 5.<br>
-Section 5.3: #1[(1),(3),(5),(7)], 2[(1),(2)], 4, 6, 7.<br>
-Section 5.4: #1[(1),(3),(5),(7)], 2[(1),(3)], 3.<br>
-Section 5.5: #1[(1),(2)], 2, 3.<br><br>  
- 
- <b>Homework  #7</b> 11 problems. Due Date: June 1st.<br>
-Section 6.1: #2, 3, 4.<br>
-Section 6.2: #3, 4, 5, 6, 7, 8.<br>
-Section 6.3: #1[(1),(3)], 2[(1),(3)].<br><br>  
  
 <b>Homework  #8</b> 16 problems. Due Date: June 8th.<br>
 Section 7.2: #1, 2, 4, 5, 7.<br>
@@ -136,7 +139,7 @@ The 2nd midterm exam: <FONT COLOR="#C40062">02 May (Tuesday), 15:00--15:50.</FON
 - Total 4 questions. Some problems will be identical or closely related to homework problems.<br>
 - Bring with you one of the following: (i) Government ID (ii) Student ID card (iii) A printed paper sheet of screenshot of your mobile student ID including your name, student ID, and your photo. If you don't have a valid ID listed here, you will be asked to leave the classroom and your exam score will be zero.<br>
 - If you cannot make it to the in-class exam due to an official cause (including properly documented illness), you have to submit a Make-up Exam Application Form at your department. Here is a handout about <a href="../teaching/makeup.pdf" title="Make-up exam policies">make-up exam policies</a>.<br>
-<br>
+The average was 49.42. The maximum score achieved by a student was 100.<br><br>
   
 <!-- TBA<br>
   
