--- a/teaching/s2023_calc1.html
+++ b/teaching/s2023_calc1.html
@@ -40,6 +40,12 @@
 2022-03-04: Office hour has been changed to Mondays 17:00--17:50.<br>  
 2022-03-04: <FONT color="#FF00FF"><b>IMPORTANT</b></FONT> CHANGE OF CLASSROOM: Starting March 7th 10:00 class, we shall meet at N14(Humanities and Social Sciences building) Room 106. Please be sure to come to this classroom for all future class meetings.<br>
 -->
+2023-05-10: We won't meet on Monday the June 19th class for the Memorial Day make-up. Instead, the course will go online for that day's class by providing a YouTube video lecture to watch through CBNU eCampus. Please see the email announcement for details.<br>
+2023-05-10: <FONT color="#FF00FF"><b>The final exam announcement</b></FONT> The detail has been posted below.<br> 
+2023-05-10: <FONT COLOR="red">Homework #8</FONT> has been posted below.<br>   
+2023-05-10: <FONT COLOR="red">Homework #7</FONT> has been posted below.<br>   
+2023-05-10: <FONT color="#FF00FF"><b>The 3rd midterm exam announcement</b></FONT> The detail has been posted below.<br>
+2023-05-09: Review report of the 1st course evaluation survey is available on eCampus.<br>   
 2023-05-02: <FONT COLOR="red">Homework #6</FONT> has been posted below.<br>   
 2023-05-02: <FONT COLOR="red">Homework #5</FONT> has been posted below.<br>   
 2023-04-25: <FONT color="#FF00FF"><b>The 2nd midterm exam announcement</b></FONT> The detail has been posted below.<br> 
@@ -100,31 +106,21 @@ Section 5.5: #1[(1),(2)], 2, 3.<br><br>
 Section 6.1: #2, 3, 4.<br>
 Section 6.2: #3, 4, 5, 6, 7, 8.<br>
 Section 6.3: #1[(1),(3)], 2[(1),(3)].<br><br>  
- 
-  
-  <!--
 
-
-<b>Homework  #4</b> 16 problems. Due Date: April 20th.<br>
- <b>Homework  #5</b> 15 problems. Due Date: Before midterm exam.<br>
-
-
-
- 
-<b>Homework  #8</b> 16 problems. Due Date: June 8th.<br>
+<b>Homework  #7</b> 16 problems.<br>
 Section 7.2: #1, 2, 4, 5, 7.<br>
 Section 7.3: #1, 3, 7[(3),(4),(5)], 8.<br>
 Section 7.4: #4, 9.<br>
 Section 7.5: #3, 7.<br>
 Section 7.6: #2, 3, 4.<br><br>  
- 
-<b>Homework  #9</b> 14 problems. Due Date: Before final exam.<br>
+  
+<b>Homework  #8</b> 18 problems.<br>
 Section 8.1: #3, 4, 6.<br>
 Section 8.2: #1[(1),(3),(5)], 2[(1),(3),(5)], 3[(1),(3),(5)].<br>
 Section 8.3: #1[(1),(3),(5)], 2[(1),(3),(5)], 3[(1),(3),(5),(7)].<br>
 Section 8.4: #1[(1),(3),(5),(7)], 4[(1),(3),(5),(7)].<br>
-Section 8.5: #1[(1),(3),(5),(7)], 2[(1),(4)], 4.<br><br>   
--->
+Section 8.5: #1[(1),(3),(5),(7)], 2[(1),(4)], 4.<br>
+Section 8.6: #1[(1),(2),(4),(6)], 2, 5, 6.<br><br>     
 
 <h2><p>Exam Schedules</p></h2>
 The 1st midterm exam: <FONT COLOR="#C40062">11 April (Tuesday), 15:00--15:50.</FONT> In-class.<br>
@@ -140,16 +136,22 @@ The 2nd midterm exam: <FONT COLOR="#C40062">02 May (Tuesday), 15:00--15:50.</FON
 - Bring with you one of the following: (i) Government ID (ii) Student ID card (iii) A printed paper sheet of screenshot of your mobile student ID including your name, student ID, and your photo. If you don't have a valid ID listed here, you will be asked to leave the classroom and your exam score will be zero.<br>
 - If you cannot make it to the in-class exam due to an official cause (including properly documented illness), you have to submit a Make-up Exam Application Form at your department. Here is a handout about <a href="../teaching/makeup.pdf" title="Make-up exam policies">make-up exam policies</a>.<br>
 The average was 49.42. The maximum score achieved by a student was 100.<br><br>
+
+The 3rd midterm exam: <FONT COLOR="#C40062">23 May (Tuesday), 15:00--15:50.</FONT> In-class.<br>
+- Coverage: Chapters 5 and 6.<br>
+- Total 4 questions. Some problems will be identical or closely related to homework problems.<br>
+- Bring with you one of the following: (i) Government ID (ii) Student ID card (iii) A printed paper sheet of screenshot of your mobile student ID including your name, student ID, and your photo. If you don't have a valid ID listed here, you will be asked to leave the classroom and your exam score will be zero.<br>
+- If you cannot make it to the in-class exam due to an official cause (including properly documented illness), you have to submit a Make-up Exam Application Form at your department. Here is a handout about <a href="../teaching/makeup.pdf" title="Make-up exam policies">make-up exam policies</a>.<br>
+
+The final exam: <FONT COLOR="#C40062">13 June (Tuesday), 15:00--15:50.</FONT> In-class.<br>
+- Coverage: Chapters 7 and 8.<br>
+- Total 4 questions. Some problems will be identical or closely related to homework problems.<br>
+- Bring with you one of the following: (i) Government ID (ii) Student ID card (iii) A printed paper sheet of screenshot of your mobile student ID including your name, student ID, and your photo. If you don't have a valid ID listed here, you will be asked to leave the classroom and your exam score will be zero.<br>
+- If you cannot make it to the in-class exam due to an official cause (including properly documented illness), you have to submit a Make-up Exam Application Form at your department. Here is a handout about <a href="../teaching/makeup.pdf" title="Make-up exam policies">make-up exam policies</a>.<br>  
   
 <!-- TBA<br>
-  
+The average was 49.42. The maximum score achieved by a student was 100.<br><br>  
  
- 2nd midterm Exam: <FONT COLOR="#C40062">08 November (Tuesday),</FONT> In-class.<br>
-- Coverage: Chapter 10.<br>
-- Total 4 questions. Some problems will be identical or closely related to homework problems.<br>
-- If you cannot make it to the in-class exam due to an official cause (including properly documented illness), you have to submit a Make-up Exam Application Form at your department.<br>
-- Bring with you one of the following: (i) Government ID (ii) Student ID card (iii) A printed paper sheet of screenshot of your mobile student ID including your name, student ID, and your photo. If you don't have a valid ID listed here, you will be asked to leave the classroom and your exam score will be zero.<br>
-  The average was 75.24. The maximum score achieved by a student was 100.<br><br>
 
  3rd midterm Exam: <FONT COLOR="#C40062">29 November (Tuesday),</FONT> In-class.<br>
 - Coverage: Chapter 11.<br>
