--- a/teaching/s2023_calc1.html
+++ b/teaching/s2023_calc1.html
@@ -40,7 +40,7 @@
 2022-03-04: Office hour has been changed to Mondays 17:00--17:50.<br>  
 2022-03-04: <FONT color="#FF00FF"><b>IMPORTANT</b></FONT> CHANGE OF CLASSROOM: Starting March 7th 10:00 class, we shall meet at N14(Humanities and Social Sciences building) Room 106. Please be sure to come to this classroom for all future class meetings.<br>
 -->
-2023-05-10: We won't meet on Monday the June 19th class for the Memorial Day make-up. Instead, the course will go online for that day's class by providing a YouTube video lecture to watch through CBNU eCampus. Please see the email announcement for details.<br>
+2023-05-10: We won't meet on Monday the June 19th class for the Memorial Day make-up. Instead, the course will go online for that day's class by providing a YouTube video lecture to watch through CBNU eCampus. You will receive an email announcement for further details nearing June 6th.<br>
 2023-05-10: <FONT color="#FF00FF"><b>The final exam announcement</b></FONT> The detail has been posted below.<br> 
 2023-05-10: <FONT COLOR="red">Homework #8</FONT> has been posted below.<br>   
 2023-05-10: <FONT COLOR="red">Homework #7</FONT> has been posted below.<br>   
