--- a/teaching/s2023_geom1.html
+++ b/teaching/s2023_geom1.html
@@ -45,7 +45,11 @@
 2022-03-10: <FONT COLOR="red">Homework #1</FONT> has been posted below.<br>
 2022-03-04: Office hour has been changed to Mondays 17:00--17:50.<br>
 -->
-2023-04-15: <FONT COLOR="red">Homework #5</FONT> has been posted below.<br>  
+2023-05-10: A good online source to learn about the geometric meaning of eccentricity is <a href="https://www.mathsisfun.com/geometry/eccentricity.html" title="Eccentricity">here</a>.<br>
+2023-05-10:<FONT COLOR="red">Homework #7</FONT> has been posted below.<br>  
+2023-05-10:<FONT COLOR="red">Homework #6</FONT> has been posted below.<br>  
+2023-05-02: Please see the change of class schedule we have discussed and agreed today in class: <a href="../teaching/s2023_geom1/2023-05-02_changeplan.pdf" title="Change of class schedule">PDF</a>.<br>
+ 2023-04-15: <FONT COLOR="red">Homework #5</FONT> has been posted below.<br>  
  2023-03-30: <FONT color="#FF00FF"><b>The 1st midterm exam announcement</b></FONT> The detail has been posted below.<br>   
 2023-03-26: <FONT COLOR="red">Homework #4</FONT> has been posted below.<br>  
 2023-03-26: <FONT COLOR="red">Homework #3</FONT> has been posted below.<br>  
@@ -92,22 +96,25 @@ Exercises in Section 5.3. p.51 #1<br>
 Exercises in Section 6.2. p.58 #2, 3, 4, 6<br>
 Exercises in Section 6.3. p.61 #1<br> 
 Exercises in Section 6.4. p.63 #1<br><br>
-  <!-- 
-  
 
-
- 
-<b>Homework  #6</b> 8 problems. Due Date: May 25th (Wed)<br>
+<b>Homework  #6</b> 8 problems.<br>
  Exercises in Section 7.1. p.68 #1, 2<br>
  Exercises in Section 7.2. p.71 #1, 2<br>
  Exercises in Section 7.3. p.73 #2, 3, 5<br>
  Exercises in Section 7.4. p.75 #1<br><br>
  
-<b>Homework  #7</b> 16 problems. Due Date: June 8th (Wed)<br>
+<b>Homework  #7</b> 7 problems.<br>
  Exercises in Section 8.1. p.78 #1, 2, 3<br>
  Exercises in Section 8.3. p.81 #1[(i),(iii)]<br>
  Exercises in Section 8.4. p.83 #1<br>
  Exercises in Section 8.5. p.86 #1[(i)], 2[(i)]<br>
+ 
+ 
+ <!-- 
+  
+
+
+ <b>Homework  #8</b> 9 problems.<br>
  Exercises in Section 9.1. p.89 #1, 2<br>
  Exercises in Section 9.2. p.93 #1, 2, 3, 4<br>
  Exercises in Section 9.3. p.96 #1, 2, 4<br><br>
