--- a/teaching/s2023_introgeom.html
+++ b/teaching/s2023_introgeom.html
@@ -45,7 +45,8 @@
 2022-03-10: <FONT COLOR="red">Homework #1</FONT> has been posted below.<br>
 2022-03-04: Office hour has been changed to Mondays 17:00--17:50.<br>
 -->
-2023-04-20: <FONT color="#FF00FF"><b>Midterm exam announcement</b></FONT> The coverage and details have been updated. See below.<br>     
+2023-05-03: <FONT COLOR="red">Homework #7</FONT> has been posted below.<br>  
+ 2023-04-20: <FONT color="#FF00FF"><b>Midterm exam announcement</b></FONT> The coverage and details have been updated. See below.<br>     
 2023-04-20: <FONT COLOR="red">Homework #6</FONT> has been posted below.<br>  
  2023-04-13: <FONT color="#FF00FF"><b>Midterm exam announcement</b></FONT> The detail has been posted below.<br>     
 2023-04-13: <FONT COLOR="red">Homework #5</FONT> has been posted below.<br>  
@@ -73,6 +74,8 @@ Chapter 1 Problems 42 to 53<br><br>
 Chapter 2 Problems 1 to 8<br><br>
 <b>Homework  #6</b> 14 problems. Due Date: April 26th (Wed).<br>
 Chapter 2 Problems 9 to 22<br><br>
+<b>Homework  #7</b> 24 problems. Due Date: May 10th (Wed).<br>
+Chapter 2 Problems 23 to 46<br><br>
 
 <h2><p>Exam Schedules</p></h2>
 Midterm Exam: <FONT COLOR="#C40062">27 April (Thursday) 13:00--14:40</FONT> in-class. <br>
