--- a/teaching/s2023_dg1.html
+++ b/teaching/s2023_dg1.html
@@ -41,6 +41,9 @@
 2022-03-11: <b>Announcements</b> Please see the standard operation procedures for an absentism for an extensive period due to SARS-CoV-2. <a href="../teaching/s2022_dg1/2022-03-11_long_covid_absence.pdf" title="Long absence due to SARS-CoV-2">PDF</a><br>
 2022-03-04: Office hour has been changed to Mondays 17:00--17:50.<br>
 -->
+2023-05-10: <FONT COLOR="red">Homework #7</FONT> has been posted below.<br>     
+2023-05-10: <FONT COLOR="red">Homework #6</FONT> has been posted below.<br>     
+2023-05-10: <FONT color="#FF00FF"><b>The 2nd midterm exam announcement</b></FONT> The detail has been posted below.<br>    
 2023-04-15: <FONT COLOR="red">Homework #5</FONT> has been posted below.<br>     
 2023-03-30: <FONT color="#FF00FF"><b>The 1st midterm exam announcement</b></FONT> The detail has been posted below.<br>    
 2023-03-30: <FONT COLOR="red">Homework #4</FONT> has been posted below.<br>     
@@ -77,6 +80,11 @@ Problems from O'Neill, Elementary Differential Geometry, p.106 Exercise #2, 7, 8
 Problems from O'Neill, Elementary Differential Geometry, p.110 Exercise #2, 4<br>
 Problems from O'Neill, Elementary Differential Geometry, p.120 Exercise #4<br><br>
 
+<b>Homework  #6</b> 7 problems. Due Date: May 25th.<br>
+Problems from Handout 2.<br><br>    
+
+<b>Homework  #7</b> 9 problems. Due Date: June 8th.<br>
+Problems from Handout 3.<br><br>      
  
  
   <!--
@@ -84,11 +92,6 @@ Problems from O'Neill, Elementary Differential Geometry, p.120 Exercise #4<br><b
  
   
   
-<b>Homework  #6</b> 7 problems. Due Date: May 25th.<br>
-Problems from Handout 2.<br><br>    
-
-<b>Homework  #7</b> 9 problems. Due Date: June 8th.<br>
-Problems from Handout 3.<br><br>      
   
 <b>Homework  #8</b> 10 problems. Due Date: Before the final exam.<br>  
 Problems from Chapter 8 Part 1: #4, 5, 6, 8, 10 <a href="s2022_dg1/hw8no10addendum.pdf" title="Open addendum to Problem 8.10">(Addendum)</a>, 24, 26, 29 <a href="s2022_dg1/hw8no29sol.pdf" title="Open Solutions to Problem 8.29">(Solution)</a>, 32, 33.<br>
@@ -108,8 +111,14 @@ Problems from Chapter 8 Part 1: #4, 5, 6, 8, 10 <a href="s2022_dg1/hw8no10addend
 - If you cannot make it to the in-class exam due to an official cause (including properly documented illness), you have to submit a Make-up Exam Application Form at your department. Here is a handout about <a href="../teaching/makeup.pdf" title="Make-up exam policies">make-up exam policies</a>.<br>
 The average was 85.52. The maximum score achieved by a student was 100.<br><br>  
   
+2nd midterm exam: <FONT COLOR="#C40062">23 May (Tuesday) 13:00--13:50</FONT> in-class. <br>
+- Coverage: Chapter 5 of the main textbook, Chapters 1 and 3 of O'Neill's book (only those parts we covered), Handout 1 problems (2021 to 2023 problems), Handouts 2 and 3.<br>
+- Total 4 questions.
+- If you cannot make it to the in-class exam due to an official cause (including properly documented illness), you have to submit a Make-up Exam Application Form at your department. Here is a handout about <a href="../teaching/makeup.pdf" title="Make-up exam policies">make-up exam policies</a>.<br>
+<br>  
+ 
 <!-- TBA<br>
-
+The average was 85.52. The maximum score achieved by a student was 100.<br>
   
  Final Exam: <FONT COLOR="#C40062">17 June (Friday) 11:00--12:40</FONT> in-class. <br>
 - Coverage: Everything covered in this course including all homework problems.<br>
