--- a/teaching/s2023_introgeom.html
+++ b/teaching/s2023_introgeom.html
@@ -45,6 +45,7 @@
 2022-03-10: <FONT COLOR="red">Homework #1</FONT> has been posted below.<br>
 2022-03-04: Office hour has been changed to Mondays 17:00--17:50.<br>
 -->
+2023-05-11: Please see the change of class schedule we have discussed and agreed today in class: <a href="../teaching/s2023_introgeom/2023-05-11_changeplan.pdf" title="Change of class schedule">PDF</a>.<br>
 2023-05-03: <FONT COLOR="red">Homework #7</FONT> has been posted below.<br>  
  2023-04-20: <FONT color="#FF00FF"><b>Midterm exam announcement</b></FONT> The coverage and details have been updated. See below.<br>     
 2023-04-20: <FONT COLOR="red">Homework #6</FONT> has been posted below.<br>  
@@ -83,17 +84,22 @@ Midterm Exam: <FONT COLOR="#C40062">27 April (Thursday) 13:00--14:40</FONT> in-c
 - Coverage (updated): Chapter 1, <s>Chapter 2 (only those sections we completed by April 20th class)</s> Chapter 2 Part I and II (p.1 to p.113). <br>
 - Total 8 questions. There will be one set of True/False questions (Please note that you get full credit if you are correct, no credit for no answer, and negative of the assigned score if your answer to this question is incorrect). This exam will be geared toward giving advantages to those who were carefully following class discussions while keeping a good pace of doing homework. <br>
 - If you cannot make it to the in-class exam due to an official cause (including properly documented illness), you have to submit a Make-up Exam Application Form at your department. Here is a handout about <a href="../teaching/makeup.pdf" title="Make-up exam policies">make-up exam policies</a>.<br>
-   
+
+ 
+ Final Exam: <FONT COLOR="#C40062">09 June (Friday) 17:00--18:40</FONT> Location: E1-2 Room 306. <br>
+- Details: TBA.<br><br>
+ 
  <!--
+
+- Coverage: Everything we covered in this course.<br>
+- Total 8 questions. There will be one set of True/False questions (Please note that you get full credit if you are correct, no credit for no answer, and negative of the assigned score if your answer to this question is incorrect). This exam will be geared toward giving advantages to those who were carefully following class discussions while keeping a good pace of doing homework. <br>
+- If you cannot make it to the in-class exam due to an official cause (including properly documented illness), you have to submit a Make-up Exam Application Form at your department. Here is a handout about <a href="../teaching/makeup.pdf" title="Make-up exam policies">make-up exam policies</a>.<br>
 - Update (2023-04-20): The exam will cover Chapter 1, Chapter 2 (only those sections we completed by April 20th class).<br>
  
 The average was 67.32. The maximum score achieved by a student was 95.<br><br>
   
   
-Final Exam: <FONT COLOR="#C40062">17 June (Friday) 14:00--15:40</FONT> Location: TBA. <br>
-- Coverage: Everything we covered in this course by June 9th including all homework problems.<br>
-- Total 8 questions. There will be one set of True/False questions (Please note that you get full credit if you are correct, no credit for no answer, and negative of the assigned score if your answer to this question is incorrect). This exam will be geared toward giving advantages to those who were carefully following class discussions while keeping a good pace of doing homework. <br>
-- If you cannot make it to the in-class exam due to an official cause (including properly documented illness), you have to submit a Make-up Exam Application Form at your department.<br>
+
 The average was 67.20. The maximum score achieved by a student was 94.<br><br>  
 -->
 
