--- a/teaching/s2023_geom1.html
+++ b/teaching/s2023_geom1.html
@@ -45,12 +45,13 @@
 2022-03-10: <FONT COLOR="red">Homework #1</FONT> has been posted below.<br>
 2022-03-04: Office hour has been changed to Mondays 17:00--17:50.<br>
 -->
-2023-05-10: A good online source to learn about the geometric meaning of eccentricity is <a href="https://www.mathsisfun.com/geometry/eccentricity.html" title="Eccentricity">here</a>.<br>
+2023-05-13: <FONT color="#FF00FF"><b>The 2nd midterm exam announcement</b></FONT> The detail has been posted below.<br>   
+ 2023-05-10: A good online source to learn about the geometric meaning of eccentricity is <a href="https://www.mathsisfun.com/geometry/eccentricity.html" title="Eccentricity">here</a>.<br>
 2023-05-10:<FONT COLOR="red">Homework #7</FONT> has been posted below.<br>  
 2023-05-10:<FONT COLOR="red">Homework #6</FONT> has been posted below.<br>  
 2023-05-02: Please see the change of class schedule we have discussed and agreed today in class: <a href="../teaching/s2023_geom1/2023-05-02_changeplan.pdf" title="Change of class schedule">PDF</a>.<br>
- 2023-04-15: <FONT COLOR="red">Homework #5</FONT> has been posted below.<br>  
- 2023-03-30: <FONT color="#FF00FF"><b>The 1st midterm exam announcement</b></FONT> The detail has been posted below.<br>   
+2023-04-15: <FONT COLOR="red">Homework #5</FONT> has been posted below.<br>  
+2023-03-30: <FONT color="#FF00FF"><b>The 1st midterm exam announcement</b></FONT> The detail has been posted below.<br>   
 2023-03-26: <FONT COLOR="red">Homework #4</FONT> has been posted below.<br>  
 2023-03-26: <FONT COLOR="red">Homework #3</FONT> has been posted below.<br>  
 2023-03-20: <b>Announcements</b> The class will go online on March 28th 11:00--11:50. We still meet on the 28th 10:00 in classroom. Please read email announcements.<br> 
@@ -139,9 +140,15 @@ The 1st midterm exam: <FONT COLOR="#C40062">12 April (Wednesday) 17:00--17:50</F
 The average was 65.10. The maximum score achieved by a student was 100.<br>
  <br>
  
+ The 2nd midterm exam: <FONT COLOR="#C40062">24 May (Wednesday) 17:00--17:50</FONT> in-class. <br>
+- Coverage: Chapters 5 to 8.<br>
+- Total 4 questions.<br>
+- If you cannot make it to the in-class exam due to an official cause (including properly documented illness), you have to submit a Make-up Exam Application Form at your department. Here is a handout about <a href="../teaching/makeup.pdf" title="Make-up exam policies">make-up exam policies</a>.<br>
+ <br>
+ 
  
  <!--TBA<br>
-
+The average was 65.10. The maximum score achieved by a student was 100.<br>
   
   
 Final Exam: <FONT COLOR="#C40062">17 June (Friday) 14:00--15:40</FONT> Location: TBA. <br>
