--- a/teaching/s2023_introgeom.html
+++ b/teaching/s2023_introgeom.html
@@ -45,7 +45,8 @@
 2022-03-10: <FONT COLOR="red">Homework #1</FONT> has been posted below.<br>
 2022-03-04: Office hour has been changed to Mondays 17:00--17:50.<br>
 -->
-2023-05-11: Please see the change of class schedule we have discussed and agreed today in class: <a href="../teaching/s2023_introgeom/2023-05-11_changeplan.pdf" title="Change of class schedule">PDF</a>.<br>
+2023-05-18: <FONT COLOR="red">Homework #8</FONT> has been posted below.<br>  
+ 2023-05-11: Please see the change of class schedule we have discussed and agreed today in class: <a href="../teaching/s2023_introgeom/2023-05-11_changeplan.pdf" title="Change of class schedule">PDF</a>.<br>
 2023-05-03: <FONT COLOR="red">Homework #7</FONT> has been posted below.<br>  
  2023-04-20: <FONT color="#FF00FF"><b>Midterm exam announcement</b></FONT> The coverage and details have been updated. See below.<br>     
 2023-04-20: <FONT COLOR="red">Homework #6</FONT> has been posted below.<br>  
@@ -77,6 +78,9 @@ Chapter 2 Problems 1 to 8<br><br>
 Chapter 2 Problems 9 to 22<br><br>
 <b>Homework  #7</b> 24 problems. Due Date: May 10th (Wed).<br>
 Chapter 2 Problems 23 to 46<br><br>
+<b>Homework  #8</b> 24 problems. Due Date: May 24th (Wed).<br>
+Chapter 2 Problems 47 to 59<br>
+Chapter 4 Problems 1 to 11<br><br>
 
 <h2><p>Exam Schedules</p></h2>
 Midterm Exam: <FONT COLOR="#C40062">27 April (Thursday) 13:00--14:40</FONT> in-class. <br>
