--- a/teaching/s2023_geom1.html
+++ b/teaching/s2023_geom1.html
@@ -45,7 +45,9 @@
 2022-03-10: <FONT COLOR="red">Homework #1</FONT> has been posted below.<br>
 2022-03-04: Office hour has been changed to Mondays 17:00--17:50.<br>
 -->
-2023-05-13: <FONT color="#FF00FF"><b>The 2nd midterm exam announcement</b></FONT> The detail has been posted below.<br>   
+2023-05-20:<FONT COLOR="red">Homework #9</FONT> has been posted below.<br>  
+ 2023-05-20:<FONT COLOR="red">Homework #8</FONT> has been posted below.<br>  
+ 2023-05-13: <FONT color="#FF00FF"><b>The 2nd midterm exam announcement</b></FONT> The detail has been posted below.<br>   
  2023-05-10: A good online source to learn about the geometric meaning of eccentricity is <a href="https://www.mathsisfun.com/geometry/eccentricity.html" title="Eccentricity">here</a>.<br>
 2023-05-10:<FONT COLOR="red">Homework #7</FONT> has been posted below.<br>  
 2023-05-10:<FONT COLOR="red">Homework #6</FONT> has been posted below.<br>  
@@ -111,16 +113,12 @@ Exercises in Section 6.4. p.63 #1<br><br>
  Exercises in Section 8.5. p.86 #1[(i)], 2[(i)]<br>
  
  
- <!-- 
-  
-
-
  <b>Homework  #8</b> 9 problems.<br>
  Exercises in Section 9.1. p.89 #1, 2<br>
  Exercises in Section 9.2. p.93 #1, 2, 3, 4<br>
  Exercises in Section 9.3. p.96 #1, 2, 4<br><br>
  
- <b>Homework  #8</b> 10 problems. Will not be collected.<br>
+ <b>Homework  #9</b> 10 problems.<br>
  Exercises in Section 10.2. p.101 #1<br>
  Exercises in Section 10.3. p.104 #1, 2<br>
  Exercises in Section 11.1. p.107 #1, 2<br>
@@ -128,7 +126,7 @@ Exercises in Section 6.4. p.63 #1<br><br>
  Exercises in Section 11.3. p.113 #1<br>
  Exercises in Section 12.1. p.118 #1[(i),(ii),(iii)]<br>
  Exercises in Section 12.2. p.121 #2<br><br>
- -->
+ 
  
 
 
