--- a/teaching/s2023_introgeom.html
+++ b/teaching/s2023_introgeom.html
@@ -45,14 +45,15 @@
 2022-03-10: <FONT COLOR="red">Homework #1</FONT> has been posted below.<br>
 2022-03-04: Office hour has been changed to Mondays 17:00--17:50.<br>
 -->
+2023-05-20: <b>Announcements</b> The last day to dispute your grade details and relevant information are <a href="../teaching/s2023_dg1/2023-05-20_dispute.pdf" title="Dispute related">here</a>.<br>
 2023-05-18: <FONT COLOR="red">Homework #8</FONT> has been posted below.<br>  
- 2023-05-11: Please see the change of class schedule we have discussed and agreed today in class: <a href="../teaching/s2023_introgeom/2023-05-11_changeplan.pdf" title="Change of class schedule">PDF</a>.<br>
+2023-05-11: Please see the change of class schedule we have discussed and agreed today in class: <a href="../teaching/s2023_introgeom/2023-05-11_changeplan.pdf" title="Change of class schedule">PDF</a>.<br>
 2023-05-03: <FONT COLOR="red">Homework #7</FONT> has been posted below.<br>  
- 2023-04-20: <FONT color="#FF00FF"><b>Midterm exam announcement</b></FONT> The coverage and details have been updated. See below.<br>     
+2023-04-20: <FONT color="#FF00FF"><b>Midterm exam announcement</b></FONT> The coverage and details have been updated. See below.<br>     
 2023-04-20: <FONT COLOR="red">Homework #6</FONT> has been posted below.<br>  
- 2023-04-13: <FONT color="#FF00FF"><b>Midterm exam announcement</b></FONT> The detail has been posted below.<br>     
+2023-04-13: <FONT color="#FF00FF"><b>Midterm exam announcement</b></FONT> The detail has been posted below.<br>     
 2023-04-13: <FONT COLOR="red">Homework #5</FONT> has been posted below.<br>  
- 2023-04-06: <FONT color="#FF00FF"><b>Midterm exam</b></FONT> will take place on April 27th (Thu), in-class. Details will be announced later.<br>   
+2023-04-06: <FONT color="#FF00FF"><b>Midterm exam</b></FONT> will take place on April 27th (Thu), in-class. Details will be announced later.<br>   
 2023-03-30: <FONT COLOR="red">Homework #4</FONT> has been posted below.<br>  
 2023-03-24: A note on Desargues' theorem and its proofs is available at CBNU eCampus (Blackboard) in the Week 4 course materials folder.<br>
 2023-03-23: <FONT COLOR="red">Homework #3</FONT> has been posted below.<br>  
