--- a/teaching/s2023_geom1.html
+++ b/teaching/s2023_geom1.html
@@ -45,11 +45,12 @@
 2022-03-10: <FONT COLOR="red">Homework #1</FONT> has been posted below.<br>
 2022-03-04: Office hour has been changed to Mondays 17:00--17:50.<br>
 -->
+2023-05-23: The announcement of the dispute procedure (2023.05.20.) has been updated. See the link therein.<br> 
 2023-05-20: <b>Announcements</b> The last day to dispute your grade details and relevant information are <a href="../teaching/s2023_dg1/2023-05-20_dispute.pdf" title="Dispute related">here</a>.<br>
 2023-05-20:<FONT COLOR="red">Homework #9</FONT> has been posted below.<br>  
- 2023-05-20:<FONT COLOR="red">Homework #8</FONT> has been posted below.<br>  
- 2023-05-13: <FONT color="#FF00FF"><b>The 2nd midterm exam announcement</b></FONT> The detail has been posted below.<br>   
- 2023-05-10: A good online source to learn about the geometric meaning of eccentricity is <a href="https://www.mathsisfun.com/geometry/eccentricity.html" title="Eccentricity">here</a>.<br>
+2023-05-20:<FONT COLOR="red">Homework #8</FONT> has been posted below.<br>  
+2023-05-13: <FONT color="#FF00FF"><b>The 2nd midterm exam announcement</b></FONT> The detail has been posted below.<br>   
+2023-05-10: A good online source to learn about the geometric meaning of eccentricity is <a href="https://www.mathsisfun.com/geometry/eccentricity.html" title="Eccentricity">here</a>.<br>
 2023-05-10:<FONT COLOR="red">Homework #7</FONT> has been posted below.<br>  
 2023-05-10:<FONT COLOR="red">Homework #6</FONT> has been posted below.<br>  
 2023-05-02: Please see the change of class schedule we have discussed and agreed today in class: <a href="../teaching/s2023_geom1/2023-05-02_changeplan.pdf" title="Change of class schedule">PDF</a>.<br>
