--- a/teaching/s2023_introgeom.html
+++ b/teaching/s2023_introgeom.html
@@ -45,6 +45,7 @@
 2022-03-10: <FONT COLOR="red">Homework #1</FONT> has been posted below.<br>
 2022-03-04: Office hour has been changed to Mondays 17:00--17:50.<br>
 -->
+2023-05-23: The announcement of the dispute procedure (2023.05.20.) has been updated. See the link therein.<br>  
 2023-05-20: <b>Announcements</b> The last day to dispute your grade details and relevant information are <a href="../teaching/s2023_dg1/2023-05-20_dispute.pdf" title="Dispute related">here</a>.<br>
 2023-05-18: <FONT COLOR="red">Homework #8</FONT> has been posted below.<br>  
 2023-05-11: Please see the change of class schedule we have discussed and agreed today in class: <a href="../teaching/s2023_introgeom/2023-05-11_changeplan.pdf" title="Change of class schedule">PDF</a>.<br>
