--- a/teaching/s2023_geom1.html
+++ b/teaching/s2023_geom1.html
@@ -45,6 +45,7 @@
 2022-03-10: <FONT COLOR="red">Homework #1</FONT> has been posted below.<br>
 2022-03-04: Office hour has been changed to Mondays 17:00--17:50.<br>
 -->
+2023-05-24: Click <a href="https://tinyurl.com/2023-1dg1geom1calc1" title="Dispute related">this link</a> to book a meeting to set up an appointment for looking at your graded 2nd midterm exam papers.<br>  
 2023-05-23: The announcement of the dispute procedure (2023.05.20.) has been updated. See the link therein.<br> 
 2023-05-20: <b>Announcements</b> The last day to dispute your grade details and relevant information are <a href="../teaching/s2023_dg1/2023-05-20_dispute.pdf" title="Dispute related">here</a>.<br>
 2023-05-20:<FONT COLOR="red">Homework #9</FONT> has been posted below.<br>  
