--- a/teaching/s2023_dg1.html
+++ b/teaching/s2023_dg1.html
@@ -40,7 +40,10 @@
 2022-03-16: <b>Announcements</b> The classes will go online during the period March 17th to March 25th. Please read email announcements.<br> 
 2022-03-11: <b>Announcements</b> Please see the standard operation procedures for an absentism for an extensive period due to SARS-CoV-2. <a href="../teaching/s2022_dg1/2022-03-11_long_covid_absence.pdf" title="Long absence due to SARS-CoV-2">PDF</a><br>
 2022-03-04: Office hour has been changed to Mondays 17:00--17:50.<br>
---> 
+-->
+2023-05-28: <FONT color="#FF00FF"><b>Final exam announcement</b></FONT> The detail has been posted below.<br> 
+2023-05-28: <FONT COLOR="red">Homework #8</FONT> has been posted below.<br>    
+2023-05-28: The announcement of the dispute procedure (2023.05.20.) has been updated. See the link therein.<br> 
 2023-05-24: Click <a href="https://tinyurl.com/2023-1dg1geom1calc1" title="Dispute related">this link</a> to book a meeting to set up an appointment for looking at your graded 2nd midterm exam papers.<br> 
 2023-05-23: The announcement of the dispute procedure (2023.05.20.) has been updated. See the link therein.<br> 
 2023-05-20: <b>Announcements</b> The last day to dispute your grade details and relevant information are <a href="../teaching/s2023_dg1/2023-05-23_dispute.pdf" title="Dispute related">here</a>.<br> 
@@ -83,13 +86,15 @@ Problems from O'Neill, Elementary Differential Geometry, p.106 Exercise #2, 7, 8
 Problems from O'Neill, Elementary Differential Geometry, p.110 Exercise #2, 4<br>
 Problems from O'Neill, Elementary Differential Geometry, p.120 Exercise #4<br><br>
 
-<b>Homework  #6</b> 7 problems. Due Date: May 25th.<br>
+<b>Homework  #6</b> 7 problems.<br>
 Problems from Handout 2.<br><br> 
 
-<b>Homework  #7</b> 9 problems. Due Date: June 8th.<br>
+<b>Homework  #7</b> 9 problems.<br>
 Problems from Handout 3.<br><br>      
- 
- 
+
+<b>Homework  #8</b> 10 problems.<br>  
+Problems from Chapter 8 Part 1: #4, 5, 6, 8, 10 <a href="s2022_dg1/hw8no10addendum.pdf" title="Open addendum to Problem 8.10">(Addendum)</a>, 24, 26, 29 <a href="s2022_dg1/hw8no29sol.pdf" title="Open Solutions to Problem 8.29">(Solution)</a>, 32, 33.<br
+Problems from Chapter 8 Part 2: #17, 19(a), 28, 30, 34, 38.<br><br> 
   <!--
 <b>Homework  #8</b> 10 problems. Due Date: Before the final exam.<br>  
 Problems from Chapter 8 Part 1: #4, 5, 6, 8, 10 <a href="s2022_dg1/hw8no10addendum.pdf" title="Open addendum to Problem 8.10">(Addendum)</a>, 24, 26, 29 <a href="s2022_dg1/hw8no29sol.pdf" title="Open Solutions to Problem 8.29">(Solution)</a>, 32, 33.<br>
@@ -110,15 +115,17 @@ The average was 85.52. The maximum score achieved by a student was 100.<br><br>
 - Coverage: Chapter 5 of the main textbook, Chapters 1 and 3 of O'Neill's book (only those parts we covered), Handout 1 problems (2021 to 2023 problems), Handouts 2 and 3.<br>
 - Total 4 questions.
 - If you cannot make it to the in-class exam due to an official cause (including properly documented illness), you have to submit a Make-up Exam Application Form at your department. Here is a handout about <a href="../teaching/makeup.pdf" title="Make-up exam policies">make-up exam policies</a>.<br>
+The average was 76.39. The maximum score achieved by a student was 100.<br>
 <br>  
- 
-<!-- TBA<br>
-The average was 85.52. The maximum score achieved by a student was 100.<br>
-  
- Final Exam: <FONT COLOR="#C40062">17 June (Friday) 11:00--12:40</FONT> in-class. <br>
+ Final Exam: <FONT COLOR="#C40062">14 June (Wednesday) 10:00--11:40</FONT> in-class. <br>
 - Coverage: Everything covered in this course including all homework problems.<br>
 - Total 8 questions. There will be one set of True/False questions (Please note that you get full credit if you are correct, no credit for no answer, and negative of the assigned score if your answer to this question is incorrect). This exam will be geared toward giving advantages to those who were carefully following class discussions while keeping a good pace of doing homework. <br>
-- If you cannot make it to the in-class exam due to an official cause (including properly documented illness), you have to submit a Make-up Exam Application Form at your department.<br>
+- If you cannot make it to the in-class exam due to an official cause (including properly documented illness), you have to submit a Make-up Exam Application Form at your department. Here is a handout about <a href="../teaching/makeup.pdf" title="Make-up exam policies">make-up exam policies</a>.<br>
+<br> 
+ 
+<!-- TBA<br>
+
+  
 The average was 46.90. The maximum score achieved by a student was 86.<br><br>
 -->  
 
