--- a/teaching/s2023_introgeom.html
+++ b/teaching/s2023_introgeom.html
@@ -45,6 +45,8 @@
 2022-03-10: <FONT COLOR="red">Homework #1</FONT> has been posted below.<br>
 2022-03-04: Office hour has been changed to Mondays 17:00--17:50.<br>
 -->
+2023-05-28: <FONT color="#FF00FF"><b>Final exam announcement</b></FONT> The detail has been posted below.<br> 
+2023-05-28: The announcement of the dispute procedure (2023.05.20.) has been updated. See the link therein.<br>  
 2023-05-25: The announcement of the dispute procedure (2023.05.20.) has been updated. See the link therein.<br>  
 2023-05-20: <b>Announcements</b> The last day to dispute your grade details and relevant information are <a href="../teaching/s2023_dg1/2023-05-23_dispute.pdf" title="Dispute related">here</a>.<br>
 2023-05-18: <FONT COLOR="red">Homework #8</FONT> has been posted below.<br>  
@@ -90,10 +92,15 @@ Midterm Exam: <FONT COLOR="#C40062">27 April (Thursday) 13:00--14:40</FONT> in-c
 - Coverage (updated): Chapter 1, <s>Chapter 2 (only those sections we completed by April 20th class)</s> Chapter 2 Part I and II (p.1 to p.113). <br>
 - Total 8 questions. There will be one set of True/False questions (Please note that you get full credit if you are correct, no credit for no answer, and negative of the assigned score if your answer to this question is incorrect). This exam will be geared toward giving advantages to those who were carefully following class discussions while keeping a good pace of doing homework. <br>
 - If you cannot make it to the in-class exam due to an official cause (including properly documented illness), you have to submit a Make-up Exam Application Form at your department. Here is a handout about <a href="../teaching/makeup.pdf" title="Make-up exam policies">make-up exam policies</a>.<br>
-
+The average was 77.81. The maximum score achieved by a student was 98.<br><br>
  
  Final Exam: <FONT COLOR="#C40062">09 June (Friday) 17:00--18:40</FONT> Location: E1-2 Room 306. <br>
-- Details: TBA.<br><br>
+- <b>Important:</b> Bring your straightedge (a ruler). You can also use a compass if you want but it is not mandatory.<br>
+- Coverage: Everything we covered in this course.<br>
+- Total 8 questions. There will be one set of True/False questions (Please note that you get full credit if you are correct, no credit for no answer, and negative of the assigned score if your answer to this question is incorrect). This exam will be geared toward giving advantages to those who were carefully following class discussions while keeping a good pace of doing homework. <br>
+- If you cannot make it to the in-class exam due to an official cause (including properly documented illness), you have to submit a Make-up Exam Application Form at your department. Here is a handout about <a href="../teaching/makeup.pdf" title="Make-up exam policies">make-up exam policies</a>.<br> 
+<br> 
+ 
  
  <!--
 
