--- a/teaching/s2023_dg1.html
+++ b/teaching/s2023_dg1.html
@@ -107,13 +107,13 @@ Problems from Chapter 8 Part 1: #4, 5, 6, 8, 10 <a href="s2022_dg1/hw8no10addend
 <h2><p>Exam Schedules</p></h2>
 1st midterm exam: <FONT COLOR="#C40062">11 April (Tuesday) 13:00--13:50</FONT> in-class. <br>
 - Coverage: Chapters 3 and 4 of the main textbook and Handout 1 problems (2016 to 2020 problems only; 2021 to 2023 problems will be covered in the 2nd midterm) <br>
-- Total 4 questions.
+- Total 4 questions.<br>
 - If you cannot make it to the in-class exam due to an official cause (including properly documented illness), you have to submit a Make-up Exam Application Form at your department. Here is a handout about <a href="../teaching/makeup.pdf" title="Make-up exam policies">make-up exam policies</a>.<br>
 The average was 85.52. The maximum score achieved by a student was 100.<br><br>  
   
 2nd midterm exam: <FONT COLOR="#C40062">23 May (Tuesday) 13:00--13:50</FONT> in-class. <br>
 - Coverage: Chapter 5 of the main textbook, Chapters 1 and 3 of O'Neill's book (only those parts we covered), Handout 1 problems (2021 to 2023 problems), Handouts 2 and 3.<br>
-- Total 4 questions.
+- Total 4 questions.<br>
 - If you cannot make it to the in-class exam due to an official cause (including properly documented illness), you have to submit a Make-up Exam Application Form at your department. Here is a handout about <a href="../teaching/makeup.pdf" title="Make-up exam policies">make-up exam policies</a>.<br>
 The average was 76.39. The maximum score achieved by a student was 100.<br>
 <br>  
