--- a/teaching/s2023_introgeom.html
+++ b/teaching/s2023_introgeom.html
@@ -45,6 +45,7 @@
 2022-03-10: <FONT COLOR="red">Homework #1</FONT> has been posted below.<br>
 2022-03-04: Office hour has been changed to Mondays 17:00--17:50.<br>
 -->
+2023-06-15: Letter grades have been submitted. Enjoy your summer break.<br>  
 2023-06-01 <b>Announcements</b> We won't meet on June 7th 14:00 (cf. announcement on May 11th). See the Week 14 folder of CBNU eCampus for a final exam summary video. <br>
 2023-06-01: <FONT color="#FF00FF"><b>Final exam announcement</b></FONT> The coverage has been updated. See below.<br>     
 2023-06-01: <FONT COLOR="red">Homework #9</FONT> has been posted below. Note the deadline is different from usual.<br>  
@@ -104,6 +105,7 @@ The average was 77.81. The maximum score achieved by a student was 98.<br><br>
 - Coverage: Everything we covered in this course up to June 1st class (p.293).<br>
 - Total 8 questions. There will be one set of True/False questions (Please note that you get full credit if you are correct, no credit for no answer, and negative of the assigned score if your answer to this question is incorrect). This exam will be geared toward giving advantages to those who were carefully following class discussions while keeping a good pace of doing homework. <br>
 - If you cannot make it to the in-class exam due to an official cause (including properly documented illness), you have to submit a Make-up Exam Application Form at your department. Here is a handout about <a href="../teaching/makeup.pdf" title="Make-up exam policies">make-up exam policies</a>.<br> 
+ The average was 61.42. The maximum score achieved by a student was 100.<br><br>
 <br> 
  
  
