--- a/teaching/f2023_dg2.html
+++ b/teaching/f2023_dg2.html
@@ -14,8 +14,8 @@
 <!-- FONT SIZE SPECIFICATION-->
 <font size="4" >
 <b>Instructor:</b> Dr. Byungdo Park &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp <b>Email:</b> <img src="../images/eml_chungbuk.jpg" width="337" height="62"><br>
-<b>Office Hours:</b> Tuesdays 18:00--18:50 at E1-1 #110 or by appointment.<br>
-<b>Syllabus:</b>  <a href="f2023_dg2/courseoutline.pdf" title="Open Course Outline">PDF</a> (updated)<br>
+<b>Office Hours:</b> Tuesdays 18:00--18:50 at E1-1 #110 or by appointment.<br> 
+<b>Syllabus:</b>  <a href="f2023_dg2/courseoutline.pdf" title="Open Course Outline">PDF</a><br>
 
 
 <h2><p>Announcements</p></h2>
