--- a/index.html
+++ b/index.html
@@ -72,11 +72,8 @@ Contemp. Math.</a></em>, <b>21</b>(2) (2019) 1--40. <a href="http://arxiv.org/ab
 <h2><p>Teaching</p></h2>
 <dl>
 
-  
-<dd><a href="teaching/s2023_dg1.html">Differential Geometry I</a></dd>
-<dd><a href="teaching/s2023_geom1.html">Geometry for teachers</a></dd>
-<dd><a href="teaching/s2023_introgeom.html">Introduction to Geometry</a></dd>
-<dd><a href="teaching/s2023_calc1.html">Calculus I</a></dd>  
+<dd><a href="teaching/f2023_dg2.html">Differential Geometry II</a></dd>
+<dd><a href="teaching/f2023_calc2.html">Calculus II</a></dd> 
 </dl>
 <ul>
   <li><a href="teaching/pastcourses.html">Past courses</a></li>
@@ -84,6 +81,11 @@ Contemp. Math.</a></em>, <b>21</b>(2) (2019) 1--40. <a href="http://arxiv.org/ab
 
 
 <!--
+<dd><a href="teaching/s2023_dg1.html">Differential Geometry I</a></dd>
+<dd><a href="teaching/s2023_geom1.html">Geometry for teachers</a></dd>
+<dd><a href="teaching/s2023_introgeom.html">Introduction to Geometry</a></dd>
+<dd><a href="teaching/s2023_calc1.html">Calculus I</a></dd>  
+  
 <dd><a href="teaching/cbnu_uc/s2023_0931019_courseoutline.pdf">Knowledge and education in the era of AI convergence</a> (Undergraduate common course)</dd>
 <dd><a href="teaching/s2021_tig1.html">Topics in Geometry I</a> (Graduate Course)</dd>
 
