--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@ Here is my <a href="CV_Park.pdf">CV</a>. <!-- My research is supported by the <a
 
 <h2><p>Publications and preprints</p></h2>
 <ul>
+  <li>Generalization of the Thistlethwaite-Tsvietkova Method, with <a href="https://www.linkedin.com/in/alice-kwon-1439831a6">Alice Kwon</a> and <a href="https://yinghongtham.github.io/">Ying Hong Tham</a>. <a href="http://arxiv.org/abs/2309.01282">ArXiv</a></li>
   <li>Brown representability for directed graphs, with <a href="https://mathscinet.ams.org/mathscinet/MRAuthorID/1255865">Zachary McGuirk</a>. <a href="http://arxiv.org/abs/2003.07426">ArXiv</a></li>
   <li>Geometric families define differential K-theory, with <a href="https://sites.google.com/view/jae-min-lee/home">Jae Min Lee</a>.</li>
   <li>On the smoothness of the geodesic spray for the Camassa-Holm equation, with <a href="https://sites.google.com/view/jae-min-lee/home">Jae Min Lee</a>, <a href="https://doi.org/10.1016/j.jmaa.2022.126472"><em>J. Math. Anal. Appl.</em></a>, <b>516</b>(1) (2022) 126472 1--12.</li>
@@ -202,7 +203,7 @@ Contemp. Math.</a></em>, <b>21</b>(2) (2019) 1--40. <a href="http://arxiv.org/ab
 <!--
 <a href="4214-06/4214-06.html">4214-06</a><br><br>-->
 
-Last Updated: 23 August 2023
+Last Updated: 6 September 2023
 
 </font>
 </body>
