--- a/teaching/f2023_calc2.html
+++ b/teaching/f2023_calc2.html
@@ -34,34 +34,33 @@
 2022-09-16: <FONT color="#FF00FF"><b>1st midterm exam announcement</b></FONT> Details have been posted below.<br>    
 2022-09-16: <b>Announcements</b> The classes will go online on Thursday September 22nd. Please read email announcements.<br>   
 2022-09-16: <FONT COLOR="red">Homework #2</FONT> has been posted below.<br>    
-2022-09-12: <FONT COLOR="red">Homework #1</FONT> has been posted below.<br>    
 2022-09-02: <b>Announcements</b> The classes will go online on Tuesday September 6th. Please read email announcements.<br>   
 2022-09-01: <b>Announcements</b> Please see the standard operation procedures for an absentism due to SARS-CoV-2. <a href="../teaching/f2022_dg2/2022-09-01_covid_absence.pdf" title="Absence due to SARS-CoV-2">PDF</a><br>
 2022-09-01: Lecture notes will be made available on CBNU eCampus hopefully by the weekend of each class meeting.<br>
  -->
-
+2023-09-13: <FONT COLOR="red">Homework #2</FONT> has been posted below.<br>    
+2023-09-13: <FONT COLOR="red">Homework #1</FONT> has been posted below.<br>    
 2023-09-01: <b>Announcements</b> <a href="../teaching/f2023_calc2/2023-09-01_dispute.pdf" title="Dispute related">Here</a> are procedures specifying details in the dispute policies.<br>
 2023-09-01: Welcome!<br>
 
 
 <h2><p>Homework</p></h2>
-TBA
-  <!--
-  
-  <b>Homework  #1</b> 10 problems.<br>
-Section 8.6: #1[(1),(2),(4),(6)], 2, 5, 6.<br>
-Section 9.1: #2, 3, 7, 8, 10, 12.<br><br>
-
-<b>Homework  #2</b> 10 problems.<br>
+<b>Homework  #1</b> 16 problems.<br>
+Section 9.1: #2, 3, 7, 8, 10, 12.<br>
 Section 9.3: #1, 2, 4, 6, 7, 8, 9, 11, 12, 13.<br><br>
  
-
-<b>Homework  #3</b> 15 problems.<br>
+<b>Homework  #2</b> 15 problems.<br>
 Section 9.4: #3, 4, 5, 6, 7, 9, 10.<br>
 Section 9.5: #1, 2, 3, 4.<br>
 Section 9.6: #3.<br>
-Section 9.8: #1, 3, 4.<br>
- <br>
+Section 9.8: #1, 3, 4.<br><br>
+ 
+
+
+
+  <!--
+<b>Homework  #3</b> 15 problems.<br>  
+
  
 <b>Homework  #4</b> 17 problems.<br>
 Section 10.1: #3, 4.<br>
