--- a/teaching/f2023_dg2.html
+++ b/teaching/f2023_dg2.html
@@ -35,23 +35,24 @@
 2022-09-01: The courseoutline has been updated. See above.<br>
 2022-09-01: <b>Announcements</b> Please see the standard operation procedures for an absentism due to SARS-CoV-2. <a href="../teaching/f2022_dg2/2022-09-01_covid_absence.pdf" title="Absence due to SARS-CoV-2">PDF</a><br>
 -->
+2023-09-13: The date and time for the <FONT color="#FF00FF"><b>final exam</b></FONT> has been posted below.<br>     
+2023-09-13: <FONT COLOR="red">Homework #1</FONT> has been posted below.<br>
 2023-09-01: <b>Announcements</b> <a href="../teaching/f2023_calc2/2023-09-01_dispute.pdf" title="Dispute related">Here</a> are procedures specifying details in the dispute policies.<br>
 2023-09-01: Welcome!<br>
 
 
 <h2><p>Homework</p></h2>
-TBA
+<b>Homework  #1</b> 16 problems.<br>
+Problems from Chapter 9 Part 1: #1, 2, 4, 6, 33, 34, 35, 37, 38, 40.<br>
+Problems from Chapter 9 Part 2: #7, 9, 12, 41, 42, 43.<br>  
+  <br> 
   
   <!--
     Unless otherwise stated, problem numbers below refer to Solved Problems and Supplementary Problems at the end of each chapter.<br><br>
 
-<b>Homework  #1</b> 16 problems.<br>
-Problems from Chapter 8: #17, 19(a), 30, 33, 34, 38.<br>
-Problems from Chapter 9 Part 1: #1, 2, 4, 6, 33, 34, 35, 37, 38, 40.<br>
-  <br> 
 
 <b>Homework  #2</b> 14 problems.<br>  
-Problems from Chapter 9 Part 2: #7, 9, 12, 41, 42, 43.<br>  
+
 Problems from the National Exam: <a href="f2022_dg2/handout1.pdf" title="Selected problems from the national exam">Handout 1</a>.<br><br>  
 
 <b>Homework  #3</b> 12 problems.<br>  
@@ -78,7 +79,12 @@ Problems from the National Exam: <a href="f2022_dg2/handout2.pdf" title="Selecte
 
 
 <h2><p>Exam Schedules</p></h2>
-TBA
+
+Midterm Exam: TBA<br><br>
+  
+Finam Exam: <FONT COLOR="#C40062">15 December (Friday),</FONT> 10:00--11:40 at E1-1 Room 136.<br>
+Detailed announcement will be followed in due time.<br><br>
+  
 <!--  
 1st midterm Exam: <FONT COLOR="#C40062">11 October (Tuesday),</FONT> In-class.<br>
 - Coverage: From Chapter 8 tangent vectors to Chapter 9 the first fundamental form.<br>
