--- a/teaching/f2023_dg2.html
+++ b/teaching/f2023_dg2.html
@@ -82,7 +82,7 @@ Problems from the National Exam: <a href="f2022_dg2/handout2.pdf" title="Selecte
 
 Midterm Exam: TBA<br><br>
   
-Finam Exam: <FONT COLOR="#C40062">15 December (Friday),</FONT> 10:00--11:40 at E1-1 Room 136.<br>
+Final Exam: <FONT COLOR="#C40062">15 December (Friday),</FONT> 10:00--11:40 at E1-1 Room 136.<br>
 Detailed announcement will be followed in due time.<br><br>
   
 <!--  
