--- a/teaching/f2023_dg2.html
+++ b/teaching/f2023_dg2.html
@@ -35,7 +35,7 @@
 2022-09-01: The courseoutline has been updated. See above.<br>
 2022-09-01: <b>Announcements</b> Please see the standard operation procedures for an absentism due to SARS-CoV-2. <a href="../teaching/f2022_dg2/2022-09-01_covid_absence.pdf" title="Absence due to SARS-CoV-2">PDF</a><br>
 -->
-2023-09-13: The date and time for the <FONT color="#FF00FF"><b>final exam</b></FONT> has been posted below.<br>     
+2023-09-13: The date and time for the <FONT color="#FF00FF"><b>final exam</b></FONT> has been posted below. This day is the make-up day for the CBNU anniversary (Wednesday September 27th).<br>     
 2023-09-13: <FONT COLOR="red">Homework #1</FONT> has been posted below.<br>
 2023-09-01: <b>Announcements</b> <a href="../teaching/f2023_calc2/2023-09-01_dispute.pdf" title="Dispute related">Here</a> are procedures specifying details in the dispute policies.<br>
 2023-09-01: Welcome!<br>
